--- a/Flutter-Responsive-Portfolio-WebApp-master/ios/Flutter/Generated.xcconfig
+++ b/Flutter-Responsive-Portfolio-WebApp-master/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\developer\flutternew\flutter
-FLUTTER_APPLICATION_PATH=D:\Flutter-Responsive-Portfolio-WebApp-master
+FLUTTER_APPLICATION_PATH=D:\flutter-portfolio\myprofile\Flutter-Responsive-Portfolio-WebApp-master
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
