--- a/Flutter-Responsive-Portfolio-WebApp-master/android/local.properties
+++ b/Flutter-Responsive-Portfolio-WebApp-master/android/local.properties
@@ -1,2 +1,2 @@
 sdk.dir=C:\\Users\\DELL\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\developer\\flutternew\\flutter
+flutter.sdk=C:\\developer\\flutter
